website/tests/snapshots/types/const-expression.exp
=== block 1 ===
No errors!

=== block 2 ===
No errors!

=== block 3 ===
No errors!

=== block 4 ===
No errors!

=== block 5 ===
Error --------------------------------------------------------------------- -:3:11

The `as const` assertion can only be used on string, numeric, boolean, object, or array literals, or const-variables
initialized with primitive literals. [unsupported-syntax]

   3| const y = x as const; // Error
                ^


Found 1 error

=== block 6 ===
No errors!

=== block 7 ===
No errors!

=== block 8 ===
No errors!

=== block 9 ===
Error --------------------------------------------------------------------- -:9:20

Cannot call `onlyAllowsExactDiv` with `divGeneral` bound to `div` because in type argument `ElementType` [1]:
component [2] is incompatible with string literal `div` [3]. [incompatible-type]

   -:9:20
    9| onlyAllowsExactDiv(divGeneral); // Error
                          ^^^^^^^^^^

References:
   <BUILTINS>/react.js:58:51
   58| declare opaque type ExactReactElement_DEPRECATED<+ElementType extends React$ElementType, +P = React$ElementConfig<ElementType>>: {...};
                                                         ^^^^^^^^^^^ [1]
   <BUILTINS>/react.js:97:52
   97|   type MixedElement = ExactReactElement_DEPRECATED<React$ElementType, unknown>;
                                                          ^^^^^^^^^^^^^^^^^ [2]
   -:4:46
    4| type ExactDiv = ExactReactElement_DEPRECATED<'div'>;
                                                    ^^^^^ [3]

Error --------------------------------------------------------------------- -:9:20

Cannot call `onlyAllowsExactDiv` with `divGeneral` bound to `div` because in type argument `ElementType` [1]: string
literal `div` [2] is incompatible with string [3]. [incompatible-type]

   -:9:20
    9| onlyAllowsExactDiv(divGeneral); // Error
                          ^^^^^^^^^^

References:
   <BUILTINS>/react.js:58:51
   58| declare opaque type ExactReactElement_DEPRECATED<+ElementType extends React$ElementType, +P = React$ElementConfig<ElementType>>: {...};
                                                         ^^^^^^^^^^^ [1]
   -:4:46
    4| type ExactDiv = ExactReactElement_DEPRECATED<'div'>;
                                                    ^^^^^ [2]
   <BUILTINS>/react.js:97:52
   97|   type MixedElement = ExactReactElement_DEPRECATED<React$ElementType, unknown>;
                                                          ^^^^^^^^^^^^^^^^^ [3]

Error --------------------------------------------------------------------- -:9:20

Cannot call `onlyAllowsExactDiv` with `divGeneral` bound to `div` because in type argument `P` [1]: `unknown` [2] is
incompatible with props of string literal `div` [3]. [incompatible-type]

   -:9:20
    9| onlyAllowsExactDiv(divGeneral); // Error
                          ^^^^^^^^^^

References:
   <BUILTINS>/react.js:58:91
   58| declare opaque type ExactReactElement_DEPRECATED<+ElementType extends React$ElementType, +P = React$ElementConfig<ElementType>>: {...};
                                                                                                 ^ [1]
   <BUILTINS>/react.js:97:71
   97|   type MixedElement = ExactReactElement_DEPRECATED<React$ElementType, unknown>;
                                                                             ^^^^^^^ [2]
   -:4:46
    4| type ExactDiv = ExactReactElement_DEPRECATED<'div'>;
                                                    ^^^^^ [3]

Error -------------------------------------------------------------------- -:10:22

Cannot create `OnlyAllowsExactDiv` element because in property `children` > type argument `ElementType` [1]:
component [2] is incompatible with string literal `div` [3]. [incompatible-type]

   -:10:22
   10| <OnlyAllowsExactDiv>{divGeneral}</OnlyAllowsExactDiv>; // Error
                            ^^^^^^^^^^

References:
   <BUILTINS>/react.js:58:51
   58| declare opaque type ExactReactElement_DEPRECATED<+ElementType extends React$ElementType, +P = React$ElementConfig<ElementType>>: {...};
                                                         ^^^^^^^^^^^ [1]
   <BUILTINS>/react.js:97:52
   97|   type MixedElement = ExactReactElement_DEPRECATED<React$ElementType, unknown>;
                                                          ^^^^^^^^^^^^^^^^^ [2]
   -:4:46
    4| type ExactDiv = ExactReactElement_DEPRECATED<'div'>;
                                                    ^^^^^ [3]

Error -------------------------------------------------------------------- -:10:22

Cannot create `OnlyAllowsExactDiv` element because in property `children` > type argument `ElementType` [1]: string
literal `div` [2] is incompatible with string [3]. [incompatible-type]

   -:10:22
   10| <OnlyAllowsExactDiv>{divGeneral}</OnlyAllowsExactDiv>; // Error
                            ^^^^^^^^^^

References:
   <BUILTINS>/react.js:58:51
   58| declare opaque type ExactReactElement_DEPRECATED<+ElementType extends React$ElementType, +P = React$ElementConfig<ElementType>>: {...};
                                                         ^^^^^^^^^^^ [1]
   -:4:46
    4| type ExactDiv = ExactReactElement_DEPRECATED<'div'>;
                                                    ^^^^^ [2]
   <BUILTINS>/react.js:97:52
   97|   type MixedElement = ExactReactElement_DEPRECATED<React$ElementType, unknown>;
                                                          ^^^^^^^^^^^^^^^^^ [3]

Error -------------------------------------------------------------------- -:10:22

Cannot create `OnlyAllowsExactDiv` element because in property `children` > type argument `P` [1]: `unknown` [2] is
incompatible with props of string literal `div` [3]. [incompatible-type]

   -:10:22
   10| <OnlyAllowsExactDiv>{divGeneral}</OnlyAllowsExactDiv>; // Error
                            ^^^^^^^^^^

References:
   <BUILTINS>/react.js:58:91
   58| declare opaque type ExactReactElement_DEPRECATED<+ElementType extends React$ElementType, +P = React$ElementConfig<ElementType>>: {...};
                                                                                                 ^ [1]
   <BUILTINS>/react.js:97:71
   97|   type MixedElement = ExactReactElement_DEPRECATED<React$ElementType, unknown>;
                                                                             ^^^^^^^ [2]
   -:4:46
    4| type ExactDiv = ExactReactElement_DEPRECATED<'div'>;
                                                    ^^^^^ [3]


Found 6 errors

=== block 10 ===
No errors!

=== block 11 ===
No errors!

=== block 12 ===
No errors!
